force-app/main/default/objects/BMX_Quality_Audit__c/BMX_Quality_Audit__c.object-meta.xml
<CustomObject>
    <label>Quality Audit</label>
    <nameField>
        <displayFormat>QA-{00000}</displayFormat>
        <label>Audit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quality Audits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>