force-app/main/default/objects/BMX_Quality_Audit__c/fields/Action_Plan_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan_Approved_Date__c</fullName>
    <label>Action Plan Approved Date</label>
    <type>DateTime</type>
</CustomField>