force-app/main/default/objects/BMX_Quality_Audit__c/fields/Already_Audited__c.field-meta.xml
<CustomField>
    <fullName>Already_Audited__c</fullName>
    <label>Previously Audited</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes-in TWD</fullName>
            </value>
            <value>
                <fullName>Yes-not in TWD</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>