force-app/main/default/objects/BMX_Quality_Audit__c/fields/Associated_Steering_committee_s__c.field-meta.xml
<CustomField>
    <fullName>Associated_Steering_committee_s__c</fullName>
    <label>Associated Steering committee(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BIOMERIEUX PERFORMANCE SOLUTIONS</fullName>
            </value>
            <value>
                <fullName>CALIBRATION (FRENCH SITES)</fullName>
            </value>
            <value>
                <fullName>COMBOURG</fullName>
            </value>
            <value>
                <fullName>COMBOURG INSTRUMENTS</fullName>
            </value>
            <value>
                <fullName>CRAPONNE</fullName>
            </value>
            <value>
                <fullName>DURHAM</fullName>
            </value>
            <value>
                <fullName>EQUIPEMENT</fullName>
            </value>
            <value>
                <fullName>FIRENZE</fullName>
            </value>
            <value>
                <fullName>FIRENZE I&amp;S</fullName>
            </value>
            <value>
                <fullName>FIRENZE INDIRECT</fullName>
            </value>
            <value>
                <fullName>GRENOBLE</fullName>
            </value>
            <value>
                <fullName>INDUSTRIAL MAINTENANCE (FRENCH SITES)</fullName>
            </value>
            <value>
                <fullName>IS</fullName>
            </value>
            <value>
                <fullName>LA BALME I&amp;S</fullName>
            </value>
            <value>
                <fullName>LA BALME IDC</fullName>
            </value>
            <value>
                <fullName>LA BALME INSTRUMENTS</fullName>
            </value>
            <value>
                <fullName>LOMBARD</fullName>
            </value>
            <value>
                <fullName>MARCY</fullName>
            </value>
            <value>
                <fullName>OEM</fullName>
            </value>
            <value>
                <fullName>QUALIFICATION-VALIDATION (FRENCH SITES)</fullName>
            </value>
            <value>
                <fullName>RIO</fullName>
            </value>
            <value>
                <fullName>SAINT LOUIS INSTRUMENTS</fullName>
            </value>
            <value>
                <fullName>SAINT LOUIS REAGENTS</fullName>
            </value>
            <value>
                <fullName>SHANGHAI</fullName>
            </value>
            <value>
                <fullName>St. Vulbas IDC</fullName>
            </value>
            <value>
                <fullName>St. Vulbas Third Party Products</fullName>
            </value>
            <value>
                <fullName>SUBSIDIARY SUPPLIER STEERING COMMITEE</fullName>
            </value>
            <value>
                <fullName>TRANSPORT EUROPE</fullName>
            </value>
            <value>
                <fullName>TRES CANTOS</fullName>
            </value>
            <value>
                <fullName>VERNIOLLE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>