force-app/main/default/objects/BMX_Quality_Audit__c/fields/Audit_Conclusion__c.field-meta.xml
<CustomField>
    <fullName>Audit_Conclusion__c</fullName>
    <label>Audit Conclusion</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>