force-app/main/default/objects/BMX_Quality_Audit__c/fields/Audit_Details__c.field-meta.xml
<CustomField>
    <fullName>Audit_Details__c</fullName>
    <label>Audit Details</label>
    <length>50000</length>
    <type>Html</type>
</CustomField>