force-app/main/default/objects/BMX_Quality_Audit__c/fields/Audit_Method__c.field-meta.xml
<CustomField>
    <fullName>Audit_Method__c</fullName>
    <label>Audit Method</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Site Audit</fullName>
            </value>
            <value>
                <fullName>Remote Audit</fullName>
            </value>
            <value>
                <fullName>Mail in Audit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>