force-app/main/default/objects/BMX_Quality_Audit__c/fields/Audit_Objectives__c.field-meta.xml
<CustomField>
    <fullName>Audit_Objectives__c</fullName>
    <label>Audit Objectives</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>