force-app/main/default/objects/BMX_Quality_Audit__c/fields/Audit_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Audit_Schedule__c</fullName>
    <label>Audit Schedule #</label>
    <referenceTo>BMX_Audits_Schedule__c</referenceTo>
    <relationshipLabel>Quality Audits</relationshipLabel>
    <relationshipName>Quality_Audits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>