force-app/main/default/objects/BMX_Quality_Audit__c/fields/Auditee_Address__c.field-meta.xml
<CustomField>
    <fullName>Auditee_Address__c</fullName>
    <label>Auditee Address</label>
    <type>TextArea</type>
</CustomField>