force-app/main/default/objects/BMX_Quality_Audit__c/fields/Auditee_Country__c.field-meta.xml
<CustomField>
    <fullName>Auditee_Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Auditee Country</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CMPL123CME__Complaint_Code__c.CMPL123CME__Type__c</field>
            <operation>equals</operation>
            <value>COUNTRY CODE</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CMPL123CME__Complaint_Code__c</referenceTo>
    <relationshipLabel>Quality Audits</relationshipLabel>
    <relationshipName>Quality_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>