force-app/main/default/objects/BMX_Quality_Audit__c/fields/Auditee_Representative_s__c.field-meta.xml
<CustomField>
    <fullName>Auditee_Representative_s__c</fullName>
    <label>Auditee Representative(s)</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>