force-app/main/default/objects/BMX_Quality_Audit__c/fields/Cancellation_Rationale__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Rationale__c</fullName>
    <label>Cancellation Rationale</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>