force-app/main/default/objects/BMX_Quality_Audit__c/fields/Deviation_from_Audit_Agenda__c.field-meta.xml
<CustomField>
    <fullName>Deviation_from_Audit_Agenda__c</fullName>
    <label>Deviation from Audit Agenda</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>