force-app/main/default/objects/BMX_Quality_Audit__c/fields/Distributor_Category__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Category__c</fullName>
    <label>Distributor Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Domestic</fullName>
            </value>
            <value>
                <fullName>Export</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>