force-app/main/default/objects/BMX_Quality_Audit__c/fields/Distributor_Name__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Name__c</fullName>
    <label>Distributor Name</label>
    <type>TextArea</type>
</CustomField>