force-app/main/default/objects/BMX_Quality_Audit__c/fields/Distributor_Number__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Number__c</fullName>
    <label>Distributor Number</label>
    <type>TextArea</type>
</CustomField>