force-app/main/default/objects/BMX_Quality_Audit__c/fields/Findings__c.field-meta.xml
<CustomField>
    <fullName>Findings__c</fullName>
    <label>Findings</label>
    <summaryForeignKey>Audit_Finding__c.Parent_Audit__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>