force-app/main/default/objects/BMX_Quality_Audit__c/fields/Findings_Closed__c.field-meta.xml
<CustomField>
    <fullName>Findings_Closed__c</fullName>
    <label>Findings Closed</label>
    <summaryFilterItems>
        <field>Audit_Finding__c.CMPL123_WF_Status__c</field>
        <operation>equals</operation>
        <value>Closed - Done</value>
    </summaryFilterItems>
    <summaryForeignKey>Audit_Finding__c.Parent_Audit__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>