force-app/main/default/objects/BMX_Quality_Audit__c/fields/Findings_Implementation_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Findings_Implementation_Overdue__c</fullName>
    <label>Findings Implementation Overdue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>