force-app/main/default/objects/BMX_Quality_Audit__c/fields/Initial_Action_Plan_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Action_Plan_Received_Date__c</fullName>
    <label>Initial Action Plan Received Date</label>
    <type>Date</type>
</CustomField>