force-app/main/default/objects/BMX_Quality_Audit__c/fields/Lead_Auditor__c.field-meta.xml
<CustomField>
    <fullName>Lead_Auditor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Auditor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quality_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>