force-app/main/default/objects/BMX_Quality_Audit__c/fields/Lead_Auditor_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Lead_Auditor_Approval_Date__c</fullName>
    <label>Lead Auditor Approval Date</label>
    <type>DateTime</type>
</CustomField>