force-app/main/default/objects/BMX_Quality_Audit__c/fields/Lead_Auditor_Approver_1__c.field-meta.xml
<CustomField>
    <fullName>Lead_Auditor_Approver_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Auditor - Approver 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quality_Audits1</relationshipName>
    <type>Lookup</type>
</CustomField>