force-app/main/default/objects/BMX_Quality_Audit__c/fields/Mail_in_Response_Date__c.field-meta.xml
<CustomField>
    <fullName>Mail_in_Response_Date__c</fullName>
    <label>Mail-in Response Date</label>
    <type>Date</type>
</CustomField>