force-app/main/default/objects/BMX_Quality_Audit__c/fields/Mail_in_Response_Duration__c.field-meta.xml
<CustomField>
    <fullName>Mail_in_Response_Duration__c</fullName>
    <formula>IF(
    ISBLANK(Actual_Start_Date__c),
    NULL,
    IF(
        ISBLANK(Mail_in_Response_Date__c),
        TODAY() - Actual_Start_Date__c,
        Mail_in_Response_Date__c - Actual_Start_Date__c
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mail-in Response Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>