force-app/main/default/objects/BMX_Quality_Audit__c/fields/Major_Nonconformitie__c.field-meta.xml
<CustomField>
    <fullName>Major_Nonconformitie__c</fullName>
    <label>Major Nonconformities</label>
    <summaryFilterItems>
        <field>Audit_Finding__c.Nonconformity_Type__c</field>
        <operation>equals</operation>
        <value>Major</value>
    </summaryFilterItems>
    <summaryForeignKey>Audit_Finding__c.Parent_Audit__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>