force-app/main/default/objects/BMX_Quality_Audit__c/fields/Minor_Nonconformities__c.field-meta.xml
<CustomField>
    <fullName>Minor_Nonconformities__c</fullName>
    <label>Minor Nonconformities</label>
    <summaryFilterItems>
        <field>Audit_Finding__c.Nonconformity_Type__c</field>
        <operation>equals</operation>
        <value>Minor</value>
    </summaryFilterItems>
    <summaryForeignKey>Audit_Finding__c.Parent_Audit__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>