force-app/main/default/objects/BMX_Quality_Audit__c/fields/Nonconformities__c.field-meta.xml
<CustomField>
    <fullName>Nonconformities__c</fullName>
    <label>Nonconformities</label>
    <summaryFilterItems>
        <field>Audit_Finding__c.Finding_Type__c</field>
        <operation>equals</operation>
        <value>Non-Conformity</value>
    </summaryFilterItems>
    <summaryForeignKey>Audit_Finding__c.Parent_Audit__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>