force-app/main/default/objects/BMX_Quality_Audit__c/fields/Notification_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Notification_Approval_Date__c</fullName>
    <label>Notification Approval Date</label>
    <type>DateTime</type>
</CustomField>