force-app/main/default/objects/BMX_Quality_Audit__c/fields/Notification_Approver__c.field-meta.xml
<CustomField>
    <fullName>Notification_Approver__c</fullName>
    <label>Notification Approver</label>
    <type>TextArea</type>
</CustomField>