force-app/main/default/objects/BMX_Quality_Audit__c/fields/Opportunities_for_Improvement__c.field-meta.xml
<CustomField>
    <fullName>Opportunities_for_Improvement__c</fullName>
    <label>Opportunities for Improvement</label>
    <summaryFilterItems>
        <field>Audit_Finding__c.Finding_Type__c</field>
        <operation>equals</operation>
        <value>Opportunity for Improvement</value>
    </summaryFilterItems>
    <summaryForeignKey>Audit_Finding__c.Parent_Audit__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>