force-app/main/default/objects/BMX_Quality_Audit__c/fields/Origination__c.field-meta.xml
<CustomField>
    <fullName>Origination__c</fullName>
    <formula>TEXT( Audit_Schedule__r.Origination__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origination</label>
    <type>Text</type>
</CustomField>