force-app/main/default/objects/BMX_Quality_Audit__c/fields/Origination_Entity__c.field-meta.xml
<CustomField>
    <fullName>Origination_Entity__c</fullName>
    <formula>TEXT( Audit_Schedule__r.Origination_Entity__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origination Entity</label>
    <type>Text</type>
</CustomField>