force-app/main/default/objects/BMX_Quality_Audit__c/fields/Previous_Non_TWD_Audit__c.field-meta.xml
<CustomField>
    <fullName>Previous_Non_TWD_Audit__c</fullName>
    <label>Previous Non-TWD Audit</label>
    <type>TextArea</type>
</CustomField>