force-app/main/default/objects/BMX_Quality_Audit__c/fields/Previous_TWD_Audit__c.field-meta.xml
<CustomField>
    <fullName>Previous_TWD_Audit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous TWD Audit</label>
    <referenceTo>BMX_Quality_Audit__c</referenceTo>
    <relationshipLabel>Quality Audits</relationshipLabel>
    <relationshipName>Quality_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>