force-app/main/default/objects/BMX_Quality_Audit__c/fields/Process_es__c.field-meta.xml
<CustomField>
    <fullName>Process_es__c</fullName>
    <label>Process(es)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>000284 - Provide and Optimize the Information System</fullName>
            </value>
            <value>
                <fullName>000774 - Market and Sell Products and Services</fullName>
            </value>
            <value>
                <fullName>004547 - Deliver and Services and Provide Customer Care</fullName>
            </value>
            <value>
                <fullName>005130 - Innovate Source Develop and Optimize Products and Services</fullName>
            </value>
            <value>
                <fullName>006173 - Plan Procure Produce and Deliver Products</fullName>
            </value>
            <value>
                <fullName>008540 - Develop and Provide HSE and Quality Systems</fullName>
            </value>
            <value>
                <fullName>017784 - Plan and Optimize Workforce</fullName>
            </value>
            <value>
                <fullName>053481 - Assess Risks and Opportunities</fullName>
            </value>
            <value>
                <fullName>053529 - Manage Finance</fullName>
            </value>
            <value>
                <fullName>053530 - Monitor Company Performance</fullName>
            </value>
            <value>
                <fullName>054588 - Define and Drive Strategy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>