force-app/main/default/objects/BMX_Quality_Audit__c/fields/Reason_for_Audit__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Audit__c</fullName>
    <label>Reason for Audit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Certification Audit</fullName>
            </value>
            <value>
                <fullName>Follow-up Audit</fullName>
            </value>
            <value>
                <fullName>For Cause audit</fullName>
            </value>
            <value>
                <fullName>Mock Inspection</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Priority Audit</fullName>
            </value>
            <value>
                <fullName>Qualification Audit</fullName>
            </value>
            <value>
                <fullName>Re-audit</fullName>
            </value>
            <value>
                <fullName>Routine audit</fullName>
            </value>
            <value>
                <fullName>Special request from Management</fullName>
            </value>
            <value>
                <fullName>&quot;Technical&quot; Audit (wording to be confirmed)</fullName>
                <label>Technical Audit</label>
            </value>
            <value>
                <fullName>Unannounced audit;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>