force-app/main/default/objects/BMX_Quality_Audit__c/fields/Report_Approval_4_Date__c.field-meta.xml
<CustomField>
    <fullName>Report_Approval_4_Date__c</fullName>
    <label>Report Approval 4 Date</label>
    <type>DateTime</type>
</CustomField>