force-app/main/default/objects/BMX_Quality_Audit__c/fields/Report_Approver_3__c.field-meta.xml
<CustomField>
    <fullName>Report_Approver_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Report Approver 3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quality_Audits3</relationshipName>
    <type>Lookup</type>
</CustomField>