force-app/main/default/objects/BMX_Quality_Audit__c/fields/Report_Approver_4__c.field-meta.xml
<CustomField>
    <fullName>Report_Approver_4__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Report Approver 4</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quality_Audits4</relationshipName>
    <type>Lookup</type>
</CustomField>