force-app/main/default/objects/BMX_Quality_Audit__c/fields/Site_Auditee_Location__c.field-meta.xml
<CustomField>
    <fullName>Site_Auditee_Location__c</fullName>
    <label>Site/Auditee Location</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Site</valueSetName>
    </valueSet>
</CustomField>