force-app/main/default/objects/BMX_Quality_Audit__c/fields/Sub_Process_es__c.field-meta.xml
<CustomField>
    <fullName>Sub_Process_es__c</fullName>
    <label>Sub-Process(es)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>SP1,</fullName>
            </value>
            <value>
                <fullName>SP2,</fullName>
            </value>
            <value>
                <fullName>SP3,</fullName>
            </value>
            <value>
                <fullName>SP4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>