force-app/main/default/objects/BMX_Quality_Audit__c/fields/Tech_Auditor__c.field-meta.xml
<CustomField>
    <fullName>Tech_Auditor__c</fullName>
    <label>Tech Auditor</label>
    <length>60</length>
    <type>Text</type>
</CustomField>