force-app/main/default/objects/BMX_Quality_Audit__c/validationRules/Limit_Edits_to_Audit_Coordinator.validationRule-meta.xml
<ValidationRule>
    <fullName>Limit_Edits_to_Audit_Coordinator</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISNEW()), 
    AND(
        NOT(INCLUDES($User.TWD_Role__c, &quot;Audit Coordinator&quot;)),
        CMPL123_WF_Status__c = &apos;Audit Preparation&apos;,
        OR(
            ISCHANGED(Lead_Auditor__c),
            ISCHANGED(Planned_Quarter__c),
            ISCHANGED(Audit_Method__c)
        )
    )
)</errorConditionFormula>
    <errorMessage>During Audit Preparation status, only users with the &apos;Audit Coordinator&apos; role are allowed to edit  fields: &apos;Lead Auditor,&apos; &apos;Planned Quarter,&apos; and &apos;Audit Method.&apos;Audit Method.&apos;</errorMessage>
</ValidationRule>