force-app/main/default/objects/BMX_Quality_Audit__c/validationRules/Limit_Edits_to_Lead_Auditor.validationRule-meta.xml
<ValidationRule>
    <fullName>Limit_Edits_to_Lead_Auditor</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISNEW()), AND($User.Id != Lead_Auditor__r.Id,
NOT(INCLUDES($User.TWD_Role__c, &quot;Audit Coordinator&quot;))), CMPL123_WF_Status__c = &apos;Audit Preparation&apos; ,
OR(
ISCHANGED( Audit_Objectives__c),
ISCHANGED( Process_es__c ),
ISCHANGED( Sub_Process_es__c ),
ISCHANGED( Department_s_Involved__c ),
ISCHANGED( Sub_Department_s_Involved__c ),
ISCHANGED( Associated_Steering_committee_s__c ),
ISCHANGED( Distributor_Number__c ),
ISCHANGED( Distributor_Name__c ),
ISCHANGED( Distributor_Category__c ),
ISCHANGED( Distributor_Type__c ),
ISCHANGED( Auditee_Address__c ),
ISCHANGED( Distributor_Type__c ),
ISCHANGED( Auditee_Country__c)))</errorConditionFormula>
    <errorMessage>During &apos;Audit Preparation&apos; only Lead Auditor or Audit Coordinator can make edits</errorMessage>
</ValidationRule>