force-app/main/default/objects/BMX_Quality_Audit__c/validationRules/Lock_fields_during_Schedule_approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_fields_during_Schedule_approval</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISNEW()),  Audit_Schedule__r.CMPL123_WF_Status__c = &apos;Pending Audit Schedule Approval&apos;)</errorConditionFormula>
    <errorMessage>Quality Audit can not be modified when parent Audit Schedule status is Pending Audit Schedule Approval</errorMessage>
</ValidationRule>