force-app/main/default/objects/BMX_Quality_Audit__c/validationRules/PreventCancellationQualityAudit.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventCancellationQualityAudit</fullName>
    <active>true</active>
    <errorConditionFormula>AND(CMPL123_WF_Action__c  = &apos;Cancel&apos;,
					 NOT(Audit_Schedule__r.CMPL123_WF_Status__c =&apos;Audit Schedule Definition&apos;))</errorConditionFormula>
    <errorMessage>You cannot cancel a Quality Audit when the Audit Schedule is not in the &apos;Audit Schedule Definition&apos; status</errorMessage>
</ValidationRule>