force-app/main/default/objects/BMX_Quality_Audit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Scope__c</columns>
    <columns>Lead_Auditor__c</columns>
    <columns>CMPL123_WF_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>